--- a/Sourcecode/main.tex
+++ b/Sourcecode/main.tex
@@ -27,7 +27,7 @@
 % personal data
 \name{Сергей}{Ященко}
 \title{Старший системный аналитик}                               % optional, remove / comment the line if not wanted
-\address{31 год}{г. Москва}{}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
+\address{32 года}{г. Москва}{}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
 %phone[fixed]{+2~(345)~678~901}                    % optional, remove / comment the line if not wanted
 %phone[fax]{+3~(456)~789~012}                      % optional, remove / comment the line if not wanted
 \email{SYurievich@gmail.com}                               % optional, remove / comment the line if not wanted
@@ -35,7 +35,7 @@
 % optional, remove / comment the line if not wanted
 \extrainfo{Telegram: @SergeyYurievich}
 %extrainfo{Skype: sy\_gia} % optional, remove / comment the line if not wanted
-\photo[74pt][0pt]{cv2}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
+\photo[74pt][0pt]{CV3}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
 %\quote{Some quote}                                 % optional, remove / comment the line if not wanted
 
 % to show numerical labels in the bibliography (default is to show no labels); only useful if you make citations in your resume
@@ -63,11 +63,19 @@
 \cvlistdoubleitem[\Neutral]{Проектирую UI и REST API}{Рисую алгоритмы обработки запросов}
 \cvlistdoubleitem[\Neutral]{Проектирую интеграции}{Пишу сиквенсы}
 \cvlistdoubleitem[\Neutral]{Ставлю задачи команде}{Провожу приемочное тестирование}
-\cvline{Инструменты}{Jira, Confluence, Postman, Swagger, Miro, PlantUML, Draw.io}
+\cvline{Инструменты}{Jira, Confluence, Postman, Swagger, Miro, PlantUML, Draw.io, Camunda BPMN, Kafka, RabbitMQ}
 %
 
-\section{Опыт работы}
-\subsection{13 лет, 11 месяцев}
+\section{Опыт работы в системном анализе}
+\subsection{10 лет, 3 месяца}
+
+\cventry{04.2022 01.2023}{Системный анлитик}{ООО «Леруа Мерлен Восток»}{г. Москва}{}{\url{https://tech.leroymerlin.ru/}\newline{} Помогал выстраивать технологическую платформу Leroy Merlin в департаменте исполнения заказов. Отвечал за поддержку изменения требований оркестратора, управляющего всеми смежными системами, обеспечивающими исполнение заказа: от его создания до передачи товара клиенту. За время работы:%
+\begin{itemize}
+\item Поддерживал внедрение новой функциональности в оркестратор;
+\item Расследовал критические инциденты, связанные с изменениями в смежных системах;  
+\item Входил в ядро команды аналитиков, которые развивают аналитическое сообщество корпорации.
+\end{itemize}}
+
 
 \cventry{09.2021 03.2022}{Ведущий бизнес аналитик}{ООО «ИТ Проспект»}{г. Санкт-Петербург}{}{\url{https://chat2desk.com/}\newline{} Chat2Desk - коммерческий продукт, предоставляющий пользователям возможность централизованного общения с клиентами через различные мессенджеры, автоматизации общения и сбора метрик. Отвечал за полное ведение аналитики по развитию продукта. За время работы:%
 \begin{itemize}
@@ -115,8 +123,8 @@
 
 \section{Знание языков}
 \cvitemwithcomment{Русский}{Свободное владение}{Родной язык}
-\cvitemwithcomment{English}{Upper intermediate}{Разговариваю относительно сносно, пишу хорошо}
-\cvitemwithcomment{Português}{Iniciante}{Начал изучение}
+\cvitemwithcomment{English}{Upper intermediate}{Разговариваю и пишу без подготовки}
+\cvitemwithcomment{Português}{Básico}{2 триместр изучения языка в группе}
 
 \section{Навыки}
 \cvdoubleitem{Технологии}{WEB, Mobile}{СУБД}{MySQL, PostgreSQL, MongoDB}
@@ -124,9 +132,9 @@
 
 \section{Рекомендации (контактные данные по запросу)}
 \begin{cvcolumns}
+  \cvcolumn[0.37]{Анастасия Болонистова}{Leroy Merlin \newline{} Product Manager \newline{}}
   \cvcolumn[0.35]{Ксения Слуцкая}{ООО "ИТ Проспект" \newline{} Руководитель разработки}
   \cvcolumn{Николай Пронин}{ООО «СТРИМ» \newline{} Директор о проектам \newline{}}
-  \cvcolumn[0.37]{Renata Akhunova}{Global Innovation Access USA \newline{} Chief Executive Officer \newline{}}
 \end{cvcolumns}
 
 % Publications from a BibTeX file without multibib
